--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: local
   datasource:
-    url: jdbc:postgresql://localhost:54333/paper_helper # 你的pgvector向量数据库
+    url: jdbc:postgresql://localhost:54333/pgvector # 你的pgvector向量数据库
     username: pgvector
     password: pgvector
   ai:
